--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
 
         <section hidden id = "update-row">
             <label>Name:</label>
-            <input type = "text" id = "update-name-input">
+            <input type = "text" id = "update-name-input"/>
             <button id = "update-row-btn">Update</button>
         </section>
     </main>
